# py-console

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
doc/: deploy.md
py_console/: __init__.py  console.py
src/py_console/: __init__.py  console.py  definitions.py
test/: test_basics.py
